<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/bg">
	<RelativeLayout
		android:id="@+id/lytTitle"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:layout_alignParentTop="true"
		android:background="@drawable/bg_title"
		android:padding="5dip"
	>
		<ImageView
		    android:contentDescription="@+id/imgLogo"
			android:id="@+id/imgLogo"
			android:layout_width="33dip"
			android:layout_height="33dip"
			android:layout_alignParentLeft="true"
			android:background="@drawable/logo"
			android:layout_centerVertical="true"
		/>
		<TextView 
			android:id="@+id/lblJudul"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_toRightOf="@+id/imgLogo"
			android:text="@string/app_name"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/white"
			android:layout_centerVertical="true"
			android:layout_marginLeft="10dip"/>
		<Button 
		     android:layout_alignParentRight="true"
		     android:layout_centerVertical="true"
	         android:id="@+id/btnBack"
	     	 android:layout_width="wrap_content" 
	     	 android:layout_height="wrap_content"
	     	 android:text="@string/back"
	     	 android:textStyle="bold"
	     	 android:textSize="14sp"
	     	 android:background="@drawable/btn_back"
	     	 android:drawableLeft="@drawable/arrow_l"
	     	 android:drawablePadding="3dip"/>
	</RelativeLayout>
<ScrollView 
		android:id="@+id/lytScroll"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:layout_below="@+id/lytTitle"
		android:layout_above="@+id/lytBottom"	
		android:fadeScrollbars="true"
	>
<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:layout_marginBottom="5dip"
		>
		<LinearLayout 
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			>
			<!-- For Address -->
			<TextView 
		   		android:id="@+id/txtMainAddress"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@drawable/bg_list"
				android:text="@string/address"
				android:textColor="@color/white"
				android:textStyle="bold"
				android:textSize="14dip"
			/>
			<TextView
				android:id="@+id/txtAddress"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/txt_address"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:drawableLeft="@drawable/address"
				/>
			<TextView 
		   		android:id="@+id/txtFooterAddress"
				android:layout_width="fill_parent"
				android:layout_height="20dip"
				android:background="@drawable/bg_bottom"
				/>
			<!-- End Address -->
			
			<!-- For Contact -->
			<TextView
			    android:layout_marginTop="5dip" 
		   		android:id="@+id/txtMainContact"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@drawable/bg_list"
				android:text="@string/contact"
				android:textColor="@color/white"
				android:textStyle="bold"
				android:textSize="14dip"
			/>
			<Button
				android:id="@+id/btnContact"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/txt_contact"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:drawableLeft="@drawable/tel"
				android:drawableRight="@drawable/arrow"
				/>
			<TextView 
		   		android:id="@+id/txtFooterContact"
				android:layout_width="fill_parent"
				android:layout_height="20dip"
				android:background="@drawable/bg_bottom"
				/>
			
			<!-- End Contact -->
			
			<!-- For Email -->
			<TextView
			    android:layout_marginTop="5dip" 
		   		android:id="@+id/txtMainEmail"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@drawable/bg_list"
				android:text="@string/email"
				android:textColor="@color/white"
				android:textStyle="bold"
				android:textSize="14dip"
			/>
			<Button
				android:id="@+id/btnEmail"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/txt_email"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:drawableLeft="@drawable/contact"
				android:drawableRight="@drawable/arrow"
				/>
			<TextView 
		   		android:id="@+id/txtFooterEmail"
				android:layout_width="fill_parent"
				android:layout_height="20dip"
				android:background="@drawable/bg_bottom"
				/>
			
			<!-- End Email -->
			
			<!-- For Official Website -->
			<TextView
			    android:layout_marginTop="5dip" 
		   		android:id="@+id/txtMainWeb"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@drawable/bg_list"
				android:text="@string/web"
				android:textColor="@color/white"
				android:textStyle="bold"
				android:textSize="14dip"
			/>
			<Button
				android:id="@+id/btnWeb"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/txt_official"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:drawableLeft="@drawable/web"
				android:drawableRight="@drawable/arrow"
				/>
			<TextView 
		   		android:id="@+id/txtFooterWeb"
				android:layout_width="fill_parent"
				android:layout_height="20dip"
				android:background="@drawable/bg_bottom"
				/>
			
			<!-- End Official Website -->
			
			<!-- For Social Media -->
			<TextView
			    android:layout_marginTop="5dip" 
		   		android:id="@+id/txtMainSocial"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@drawable/bg_list"
				android:text="@string/social"
				android:textColor="@color/white"
				android:textStyle="bold"
				android:textSize="14dip"
			/>
			<Button
				android:id="@+id/btnFB"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/fb"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:drawableLeft="@drawable/fb"
				android:drawableRight="@drawable/arrow"
				/>
			<ImageView
			    android:contentDescription="@+id/separator1"
				android:id="@+id/separator1"
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:background="@color/grey"  
			/>
			<Button
				android:id="@+id/btnTwitter"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/twit"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:drawableLeft="@drawable/twit"
				android:drawableRight="@drawable/arrow"
				/>
			<ImageView
			    android:contentDescription="@+id/separator2"
				android:id="@+id/separator2"
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:background="@color/grey"  
			/>
			<Button
				android:id="@+id/btnLinkedin"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/link"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:drawableLeft="@drawable/in"
				android:drawableRight="@drawable/arrow"
				/>
			<ImageView
			    android:contentDescription="@+id/separator3"
				android:id="@+id/separator3"
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:background="@color/grey"  
			/>
			<Button
				android:id="@+id/btnYoutube"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/you"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:drawableLeft="@drawable/you"
				android:drawableRight="@drawable/arrow"
				/>
			<TextView 
		   		android:id="@+id/txtFooterSocial"
				android:layout_width="fill_parent"
				android:layout_height="20dip"
				android:background="@drawable/bg_bottom"
				/>
			<!-- End Social Media -->
			
			<!-- For Locations -->
			<TextView
			    android:layout_marginTop="5dip" 
		   		android:id="@+id/txtMainLoc"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@drawable/bg_list"
				android:text="@string/map"
				android:textColor="@color/white"
				android:textStyle="bold"
				android:textSize="14dip"
			/>
			<Button
				android:id="@+id/btnLoc"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/loc"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:drawableLeft="@drawable/map"
				android:drawableRight="@drawable/arrow"
				/>
			<TextView 
		   		android:id="@+id/txtFooterLoc"
				android:layout_width="fill_parent"
				android:layout_height="20dip"
				android:background="@drawable/bg_bottom"
				/>
			
			<!-- End Locations-->
			
		</LinearLayout>
</LinearLayout>
</ScrollView>
<RelativeLayout
		android:id="@+id/lytBottom"
		android:layout_width="fill_parent"
		android:layout_height="40dip"
		android:layout_alignParentBottom="true"
		android:background="@drawable/bg_title"
		android:padding="5dip"
	>
		<TextView 
			android:id="@+id/lblBottom"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/copy"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/white"
			android:layout_centerVertical="true"
			android:gravity="center"/>
	</RelativeLayout>
</RelativeLayout>