<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/bg">
	<RelativeLayout
		android:id="@+id/lytTitle"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:layout_alignParentTop="true"
		android:background="@drawable/bg_title"
		android:padding="5dip"
	>
		<ImageView
		    android:contentDescription="@+id/imgLogo"
			android:id="@+id/imgLogo"
			android:layout_width="33dip"
			android:layout_height="33dip"
			android:layout_alignParentLeft="true"
			android:background="@drawable/logo"
			android:layout_centerVertical="true"
		/>
		<TextView 
			android:id="@+id/lblJudul"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_toRightOf="@+id/imgLogo"
			android:text="@string/app_name"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/white"
			android:layout_centerVertical="true"
			android:layout_marginLeft="10dip"/>
		<Button 
		     android:layout_alignParentRight="true"
		     android:layout_centerVertical="true"
	         android:id="@+id/btnBack"
	     	 android:layout_width="wrap_content" 
	     	 android:layout_height="wrap_content"
	     	 android:text="@string/back"
	     	 android:textStyle="bold"
	     	 android:textSize="14sp"
	     	 android:background="@drawable/btn_back"
	     	 android:drawableLeft="@drawable/arrow_l"
	     	 android:drawablePadding="3dip"/>
	</RelativeLayout>
<ScrollView 
		android:id="@+id/lytScroll"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:layout_below="@+id/lytTitle"
		android:layout_above="@+id/lytBottom"	
		android:fadeScrollbars="true"
	>
<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:layout_marginBottom="5dip"
		>
		<LinearLayout 
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			>
			
			<!-- For About -->
			<TextView
			    android:layout_marginTop="5dip" 
		   		android:id="@+id/txtMainAbout"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@drawable/bg_list"
				android:text="@string/about"
				android:textColor="@color/white"
				android:textStyle="bold"
				android:textSize="14dip"
			/>
			<LinearLayout 
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/main_button"
			>
				<ImageView
				    android:contentDescription="@+id/imgLogoAbout"
					android:id="@+id/imgLogoAbout"
					android:layout_width="fill_parent"
					android:layout_height="150dip"
					android:background="@drawable/main_image"
					android:padding="30dip"
					android:layout_gravity="center"
				/>
			</LinearLayout>
			<TextView
				android:id="@+id/txtAbout"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/txt_about"
				android:textColor="@color/black"
				android:textStyle="bold"
				/>
			<TextView 
		   		android:id="@+id/txtFooterAbout"
				android:layout_width="fill_parent"
				android:layout_height="20dip"
				android:background="@drawable/bg_bottom"
				/>
			
			<!-- End About -->
			
			<!-- For Vision -->
			<TextView 
			    android:layout_marginTop="5dip"
		   		android:id="@+id/txtMainVisi"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@drawable/bg_list"
				android:text="@string/visi"
				android:textColor="@color/white"
				android:textStyle="bold"
				android:textSize="14dip"
			/>
			<TextView
				android:id="@+id/txtVisi"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/txt_mision"
				android:textColor="@color/black"
				android:textStyle="bold"
				/>
			<TextView 
		   		android:id="@+id/txtFooterVisi"
				android:layout_width="fill_parent"
				android:layout_height="20dip"
				android:background="@drawable/bg_bottom"
				/>
			<!-- End Vision -->
			
			<!-- For Mision -->
			
			<TextView
			    android:layout_marginTop="5dip" 
		   		android:id="@+id/txtMainMisi"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@drawable/bg_list"
				android:text="@string/misi"
				android:textColor="@color/white"
				android:textStyle="bold"
				android:textSize="14dip"
			/>
			<TextView
				android:id="@+id/txtMisi"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/txt_mision"
				android:textColor="@color/black"
				android:textStyle="bold"
				/>
			<TextView 
		   		android:id="@+id/txtFooterMisi"
				android:layout_width="fill_parent"
				android:layout_height="20dip"
				android:background="@drawable/bg_bottom"
				/>
			<!-- End Mision -->
		</LinearLayout>
</LinearLayout>
</ScrollView>
<RelativeLayout
		android:id="@+id/lytBottom"
		android:layout_width="fill_parent"
		android:layout_height="40dip"
		android:layout_alignParentBottom="true"
		android:background="@drawable/bg_title"
		android:padding="5dip"
	>
		<TextView 
			android:id="@+id/lblBottom"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/copy"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/white"
			android:layout_centerVertical="true"
			android:gravity="center"/>
	</RelativeLayout>
</RelativeLayout>