<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/bg">
	<RelativeLayout
		android:id="@+id/lytTitle"
		android:layout_width="fill_parent"
		android:layout_height="50dip"
		android:layout_alignParentTop="true"
		android:background="@drawable/bg_title"
		android:padding="5dip"
	>
		<ImageView
		    android:contentDescription="@+id/imgLogo"
			android:id="@+id/imgLogo"
			android:layout_width="33dip"
			android:layout_height="33dip"
			android:layout_alignParentLeft="true"
			android:background="@drawable/logo"
			android:layout_centerVertical="true"
		/>
		<TextView 
			android:id="@+id/lblJudul"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_toRightOf="@+id/imgLogo"
			android:text="@string/app_name"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/white"
			android:layout_centerVertical="true"
			android:layout_marginLeft="10dip"/>
	</RelativeLayout>
<ScrollView 
		android:id="@+id/lytScroll"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:layout_below="@+id/lytTitle"
		android:layout_above="@+id/lytBottom"	
		android:fadeScrollbars="true"
	>
<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:layout_marginBottom="5dip"
		>
		<LinearLayout 
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
		<LinearLayout 
		    android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:padding="10dip"
			android:background="@color/white"
			android:layout_marginBottom="15dip"
		    >
		    <ImageView
		    android:contentDescription="@+id/imgLogoCompany"
			android:id="@+id/imgLogoCompany"
			android:layout_width="fill_parent"
			android:layout_height="200dip"
			android:background="@drawable/main_image"
		/>
		</LinearLayout>
		
		<TextView 
		   		android:id="@+id/txtMain"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@drawable/bg_list"
				android:text="@string/main"
				android:textColor="@color/white"
				android:textStyle="bold"
				android:textSize="14dip"
		/>
		<Button
				android:id="@+id/btnAbout"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|left"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/about"
				android:textColor="@color/black"
				android:textStyle="bold"		
				android:drawableLeft="@drawable/about"
				android:drawableRight="@drawable/arrow"
				/>
		<ImageView
			    android:contentDescription="@+id/separator1"
				android:id="@+id/separator1"
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:background="@color/grey"  
		/>
		<Button
				android:id="@+id/btnPort"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/portfolio"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:drawableLeft="@drawable/port"
				android:drawableRight="@drawable/arrow"
				/>
		<ImageView
			    android:contentDescription="@+id/separator2"
				android:id="@+id/separator2"
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:background="@color/grey"  
		/>
		<Button
				android:id="@+id/btnContact"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="left|center_vertical"
				android:drawablePadding="10dip"
				android:background="@drawable/main_button"
				android:text="@string/contact"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:drawableLeft="@drawable/contact"
				android:drawableRight="@drawable/arrow"
				/>
		<TextView 
		   		android:id="@+id/txtFooter"
				android:layout_width="fill_parent"
				android:layout_height="20dip"
				android:background="@drawable/bg_bottom"
		/>
		</LinearLayout>
</LinearLayout>
</ScrollView>
<RelativeLayout
		android:id="@+id/lytBottom"
		android:layout_width="fill_parent"
		android:layout_height="40dip"
		android:layout_alignParentBottom="true"
		android:background="@drawable/bg_title"
		android:padding="5dip"
	>
		<TextView 
			android:id="@+id/lblBottom"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="@string/copy"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="@color/white"
			android:layout_centerVertical="true"
			android:gravity="center"/>
	</RelativeLayout>
</RelativeLayout>
