<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="@color/white"
	>
     <ScrollView
	     android:id="@+id/ScrollView"
	     android:layout_width="fill_parent" 
	     android:layout_height="wrap_content"
     >     	
	     <LinearLayout 
	         android:layout_width="fill_parent" 
		     android:layout_height="wrap_content"
		     android:orientation="vertical"
		     android:padding="10dip"
	         >
	      <ImageView
	         android:contentDescription="@+id/ImageService"	     
	         android:id="@+id/ImageService"
		     android:layout_width="fill_parent" 
		     android:layout_height="200dip"
		     android:background="@drawable/main_image"
			/>
	      <TextView
	         android:layout_marginTop="10dip"
	         android:text="@string/cat" 
	         android:id="@+id/txtCategory"
	     	 android:layout_width="fill_parent" 
	     	 android:layout_height="wrap_content"
	     	 android:textSize="18sp"
	     	 android:textStyle="bold"
	     	 android:textColor="@color/black"
	     	 />
	     <ImageView
			    android:contentDescription="@+id/separator1"
				android:id="@+id/separator1"
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:background="@color/grey"  
			/>
	     
	     <TextView
	         android:id="@+id/txt_cat_service"
	     	 android:layout_width="fill_parent" 
	     	 android:layout_height="wrap_content"
	     	 android:textSize="12sp"
	     	 android:textStyle="bold"
	     	 android:layout_marginTop="10dip"
	     	 android:textColor="@color/txt_grey"
	     	 />
	     <TextView
	         android:layout_marginTop="10dip"
	         android:text="@string/title" 
	         android:id="@+id/txtTitleService"
	     	 android:layout_width="fill_parent" 
	     	 android:layout_height="wrap_content"
	     	 android:textSize="18sp"
	     	 android:textStyle="bold"
	     	 android:textColor="@color/black"
	     	 />
	     <ImageView
			    android:contentDescription="@+id/separator2"
				android:id="@+id/separator2"
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:background="@color/grey"  
			/>
	     
	     <TextView
	         android:id="@+id/txt_title_service"
	     	 android:layout_width="fill_parent" 
	     	 android:layout_height="wrap_content"
	     	 android:textSize="12sp"
	     	 android:textStyle="bold"
	     	 android:layout_marginTop="10dip"
	     	 android:textColor="@color/txt_grey"
	     	 />
	     
	     <TextView
	         android:text="@string/desc" 
	         android:id="@+id/txtDescService"
	     	 android:layout_width="fill_parent" 
	     	 android:layout_height="wrap_content"
	     	 android:textSize="18sp"
	     	 android:textStyle="bold"
	     	 android:layout_marginTop="10dip"
	     	 android:textColor="@color/black"
	     	 />
	     <ImageView
			    android:contentDescription="@+id/separator3"
				android:id="@+id/separator3"
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:background="@color/grey"  
			/>
	     <TextView
	         android:id="@+id/txt_desc_service"
	     	 android:layout_width="fill_parent" 
	     	 android:layout_height="wrap_content"
	     	 android:textSize="12sp"
	     	 android:textStyle="bold"
	     	 android:layout_marginTop="10dip"
	     	 android:textColor="@color/txt_grey"
	     	 />
	     <Button 
	         android:id="@+id/btnClose"
	         android:padding="10dip" 
	         android:layout_margin="20dip"
	     	 android:layout_width="fill_parent" 
	     	 android:layout_height="wrap_content"
	     	 android:text="@string/close"
	     	 android:textStyle="bold"
	     	 android:textSize="18sp"
	     	 android:background="@drawable/btn_dialog"
	     	 android:layout_marginTop="10dip"/>
	     </LinearLayout>
     </ScrollView>
    </RelativeLayout>
